# shock-clock

./: .gitignore  Cargo.toml  README.md  Untitled Diagram.drawio  bwm2-hü.md  erd-vulkane.drawio  flake.nix  package-lock.json  package.json  projektauftrag.md  styles.css  tailwind.config.js  uwu.keystore
shock-clock-utils/: Cargo.toml
shock-clock-utils/src/: ble.rs  lib.rs
shock-clock/shock_clock/: shock_clock.ino
src/: app.rs  components.rs  lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: accessibility.rs  ble.rs  lib.rs  main.rs  watcher_state.rs
src/components/: watcher.rs
tauri-plugin-accessibility/: Cargo.toml  README.md  package.json
tauri-plugin-accessibility/android/: build.gradle.kts
tauri-plugin-accessibility/android/src/androidTest/java/: ExampleInstrumentedTest.kt
tauri-plugin-accessibility/android/src/main/: AndroidManifest.xml
tauri-plugin-accessibility/android/src/main/java/: AccessibilityEventManager.kt  Example.kt  ExamplePlugin.kt
tauri-plugin-accessibility/android/src/main/values/: strings.xml
tauri-plugin-accessibility/android/src/test/java/: ExampleUnitTest.kt
tauri-plugin-accessibility/examples/tauri-app/: package.json
tauri-plugin-accessibility/examples/tauri-app/src/: App.svelte
tauri-plugin-accessibility/examples/tauri-app/src-tauri/: Cargo.toml
tauri-plugin-accessibility/examples/tauri-app/src-tauri/capabilities/: default.json
tauri-plugin-accessibility/examples/tauri-app/src-tauri/src/: lib.rs
tauri-plugin-accessibility/guest-js/: index.ts
tauri-plugin-accessibility/permissions/autogenerated/: reference.md
tauri-plugin-accessibility/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
(+1 files in other folders)
