[package]
name = "shock-clock-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.6", features = ["csr", "nightly"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
leptos-mview = "0.3.2"
leptos_icons = "0.3.1"
icondata = "0.4.0"
icondata_core = "0.1.0"
shock-clock-utils = {path = "./shock-clock-utils"}
uuid = {version= "1.11.0", features = ["v4", "serde"]}

[workspace]
members = [ "shock-clock-utils","src-tauri"]
